[gd_scene load_steps=23 format=4 uid="uid://cewrglbkov8ef"]

[ext_resource type="Script" uid="uid://hjbygatmwse0" path="res://boardgameplayscene.gd" id="1_argfh"]
[ext_resource type="Texture2D" uid="uid://d22jaxbafg8b8" path="res://assets/pixil-frame-0_scaled_6x_pngcrushed.png" id="2_whvtt"]
[ext_resource type="Texture2D" uid="uid://bpsrftwenoe4r" path="res://assets/New Piskel(5).png" id="3_dgayj"]
[ext_resource type="Texture2D" uid="uid://b8o8wv6cgxwqf" path="res://assets/tileset_scaled_2x_pngcrushed.png" id="3_id3j5"]
[ext_resource type="Texture2D" uid="uid://bguvc7pcpd7ws" path="res://assets/map(1).png" id="4_6t7ku"]
[ext_resource type="Texture2D" uid="uid://cu1p3um87ky7n" path="res://assets/New Piskel(3).png" id="4_801q5"]
[ext_resource type="Texture2D" uid="uid://p2ihefcpparn" path="res://assets/New Piskel(1).png" id="5_ubj84"]
[ext_resource type="Texture2D" uid="uid://dyvg46vxu2g0i" path="res://assets/Sprite-0001.png" id="5_ukf34"]
[ext_resource type="Texture2D" uid="uid://b211s5nqohnf1" path="res://assets/Sprite-0001-Sheet.png" id="5_wjq3b"]
[ext_resource type="Texture2D" uid="uid://d1ypjvwok5t4v" path="res://assets/New Piskel(2).png" id="6_s8inr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_id3j5"]
texture = ExtResource("5_wjq3b")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 1
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 1
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
4:1/0 = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 2
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 2
1:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
6:9/0 = 0
7:9/0 = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 2

[sub_resource type="TileSet" id="TileSet_wjq3b"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0 "
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_0/terrain_1/name = "Terrain 1"
terrain_set_0/terrain_1/color = Color(0.061599992, 0.29347998, 0.88, 1)
terrain_set_0/terrain_2/name = "Terrain 2"
terrain_set_0/terrain_2/color = Color(0.46875, 0.5, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_id3j5")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wjq3b"]
texture = ExtResource("3_id3j5")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qr4wp"]
texture = ExtResource("4_6t7ku")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0

[sub_resource type="TileSet" id="TileSet_6t7ku"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_wjq3b")
sources/1 = SubResource("TileSetAtlasSource_qr4wp")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ukf34"]
texture = ExtResource("5_wjq3b")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
7:0/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
7:1/0 = 0
2:2/0 = 0
4:2/0 = 0
7:2/0 = 0
4:3/0 = 0
4:4/0 = 0
1:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSet" id="TileSet_27yr1"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_ukf34")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_27yr1"]
texture = ExtResource("5_ukf34")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0

[sub_resource type="TileSet" id="TileSet_32ugl"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_27yr1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t7ku"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.15294118, 0, 0.36862746, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m64gg"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.20392157, 0.011764706, 0.85882354, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ihpm"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.11372549, 0.6509804, 0.047058824, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Boardgameplayscene" type="Node2D"]
script = ExtResource("1_argfh")
metadata/_edit_horizontal_guides_ = [0.0, 184.0]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 8)
format = 2

[node name="Snaketilelayer" type="TileMapLayer" parent="TileMap"]
z_index = 20
position = Vector2(960.00006, 592)
scale = Vector2(0.75, 0.75)
tile_set = SubResource("TileSet_wjq3b")

[node name="Tilemaplayerresized" type="TileMapLayer" parent="TileMap"]
z_index = -3
position = Vector2(960, 592)
scale = Vector2(0.75, 0.75)
tile_map_data = PackedByteArray("AADz/wAAAAAAAAAAAAD0/wAAAAABAAAAAAD1/wAAAAACAAAAAAD2/wAAAAADAAAAAAD3/wAAAAAEAAAAAAD4/wAAAAAFAAAAAAD5/wAAAAAGAAAAAAD6/wAAAAAHAAAAAAD7/wAAAAAAAAEAAAD8/wAAAAABAAEAAAD8////AAADAAEAAAD7////AAAEAAEAAAD6////AAAFAAEAAAD5////AAAGAAEAAAD4////AAAHAAEAAAD3////AAAAAAIAAAD2////AAABAAIAAAD1////AAACAAIAAAD0////AAADAAIAAADz////AAACAAEAAADz//7/AAAFAAIAAAD0//7/AAAEAAIAAAD1//7/AAAGAAIAAAD2//7/AAAHAAIAAAD3//7/AAAAAAMAAAD4//7/AAABAAMAAAD5//7/AAACAAMAAAD6//7/AAADAAMAAAD7//7/AAAEAAMAAAD8//7/AAAFAAMAAAD8//3/AAAGAAMAAAD7//3/AAAHAAMAAAD6//3/AAAAAAQAAAD5//3/AAABAAQAAAD4//3/AAACAAQAAAD3//3/AAADAAQAAAD2//3/AAAEAAQAAADz//3/AAAHAAQAAAD1//3/AAAFAAQAAAD0//3/AAAGAAQAAADz//f/AQAAAAAAAADz//j/AQAAAAEAAADz//n/AQAAAAIAAADz//r/AQAAAAMAAADz//v/AQAAAAQAAADz//z/AQAAAAUAAAD0//f/AQABAAAAAAD0//j/AQABAAEAAAD0//n/AQABAAIAAAD0//r/AQABAAMAAAD0//v/AQABAAQAAAD0//z/AQABAAUAAAD1//f/AQACAAAAAAD1//j/AQACAAEAAAD1//n/AQACAAIAAAD1//r/AQACAAMAAAD1//v/AQACAAQAAAD1//z/AQACAAUAAAD2//f/AQADAAAAAAD2//j/AQADAAEAAAD2//n/AQADAAIAAAD2//r/AQADAAMAAAD2//v/AQADAAQAAAD2//z/AQADAAUAAAD3//f/AQAEAAAAAAD3//j/AQAEAAEAAAD3//n/AQAEAAIAAAD3//r/AQAEAAMAAAD3//v/AQAEAAQAAAD3//z/AQAEAAUAAAD4//f/AQAFAAAAAAD4//j/AQAFAAEAAAD4//n/AQAFAAIAAAD4//r/AQAFAAMAAAD4//v/AQAFAAQAAAD4//z/AQAFAAUAAAD5//f/AQAGAAAAAAD5//j/AQAGAAEAAAD5//n/AQAGAAIAAAD5//r/AQAGAAMAAAD5//v/AQAGAAQAAAD5//z/AQAGAAUAAAD6//f/AQAHAAAAAAD6//j/AQAHAAEAAAD6//n/AQAHAAIAAAD6//r/AQAHAAMAAAD6//v/AQAHAAQAAAD6//z/AQAHAAUAAAD7//f/AQAIAAAAAAD7//j/AQAIAAEAAAD7//n/AQAIAAIAAAD7//r/AQAIAAMAAAD7//v/AQAIAAQAAAD7//z/AQAIAAUAAAD8//f/AQAJAAAAAAD8//j/AQAJAAEAAAD8//n/AQAJAAIAAAD8//r/AQAJAAMAAAD8//v/AQAJAAQAAAD8//z/AQAJAAUAAAA=")
tile_set = SubResource("TileSet_6t7ku")

[node name="LadderTileLayer" type="TileMapLayer" parent="TileMap"]
z_index = 140
position = Vector2(960, 592)
scale = Vector2(0.75, 0.75)
tile_set = SubResource("TileSet_27yr1")

[node name="moneylayer" type="TileMapLayer" parent="TileMap"]
z_index = 190
position = Vector2(960, 592)
scale = Vector2(0.75, 0.75)
tile_set = SubResource("TileSet_32ugl")

[node name="rollresult" type="Label" parent="."]
offset_left = 1024.0
offset_top = 216.0
offset_right = 1152.0
offset_bottom = 248.0
metadata/_edit_use_anchors_ = true

[node name="MoneyLabel" type="Label" parent="."]
offset_top = 192.0
offset_right = 128.0
offset_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "$"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="playerYELLOW" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(360, 624)
scale = Vector2(0.32, 0.32)
texture = ExtResource("3_dgayj")

[node name="playerRED" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(364.48, 636.48)
scale = Vector2(0.32, 0.32)
texture = ExtResource("4_801q5")

[node name="playerBLUE" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(348.48, 620.48)
scale = Vector2(0.32, 0.32)
texture = ExtResource("5_ubj84")

[node name="player1spriteGreen" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(348.48, 636.48004)
scale = Vector2(0.32, 0.32)
texture = ExtResource("6_s8inr")

[node name="Moneytilesprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(380, 620)
scale = Vector2(0.416667, 0.416667)
texture = ExtResource("2_whvtt")

[node name="dicerollbutton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1024.0
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 320.0
grow_horizontal = 2
text = "dice roll"
metadata/_edit_use_anchors_ = true

[node name="showpowercardsbutton" type="Button" parent="."]
offset_left = 1024.0
offset_top = 448.0
offset_right = 1149.0
offset_bottom = 512.0
text = "show hand"
metadata/_edit_use_anchors_ = true

[node name="Showshopbutton" type="Button" parent="."]
offset_left = 1088.0
offset_top = 360.0
offset_right = 1152.0
offset_bottom = 408.0
text = "shop"
metadata/_edit_use_anchors_ = true

[node name="permanentcardstogglebutton" type="Button" parent="."]
offset_left = 1048.0
offset_top = 64.0
offset_right = 1151.0
offset_bottom = 128.0
text = "permenents"
metadata/_edit_use_anchors_ = true

[node name="debuglabel" type="Label" parent="."]
visible = false
offset_right = 416.0
offset_bottom = 64.0
autowrap_mode = 3

[node name="Victorypanel" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 296.0
offset_top = 312.0
offset_right = 808.0
offset_bottom = 504.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="victorylabel" type="Label" parent="Victorypanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 104.0
offset_right = -104.0
offset_bottom = 23.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Backtomenubutton" type="Button" parent="Victorypanel"]
layout_mode = 0
offset_left = 160.0
offset_top = 64.0
offset_right = 352.0
offset_bottom = 128.0
text = "Back To Menu"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 424.0
offset_right = 304.0
offset_bottom = 629.0
text = "How To Play:
Reach 100 by rolling the dice

use \"PowerCards\" in your \"Hand\" for Bonus and power ups.

Use Permanents For Passive Bonuses and power ups"
horizontal_alignment = 1
autowrap_mode = 3

[node name="UI" type="CanvasLayer" parent="."]

[node name="HandPanel" type="Panel" parent="UI"]
visible = false
offset_left = 512.0
offset_top = 448.0
offset_right = 992.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6t7ku")

[node name="cardhancontainer" type="HBoxContainer" parent="UI/HandPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 472.0
offset_bottom = 176.0
theme_override_constants/separation = 20
alignment = 1

[node name="Shoppanel" type="Panel" parent="UI"]
visible = false
offset_left = 272.0
offset_top = 88.0
offset_right = 944.0
offset_bottom = 392.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m64gg")
metadata/_edit_use_anchors_ = true

[node name="Shopcontainer1" type="HBoxContainer" parent="UI/Shoppanel"]
layout_mode = 0
offset_left = 240.0
offset_right = 672.0
offset_bottom = 168.0
metadata/_edit_use_anchors_ = true

[node name="permshopcontainer" type="HBoxContainer" parent="UI/Shoppanel"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 168.0
metadata/_edit_use_anchors_ = true

[node name="PermanentPanel" type="Panel" parent="UI"]
visible = false
offset_left = 320.0
offset_right = 896.0
offset_bottom = 168.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1ihpm")

[node name="permContainer" type="HBoxContainer" parent="UI/PermanentPanel"]
clip_contents = true
custom_minimum_size = Vector2(120, 160)
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -280.0
offset_right = 280.0
offset_bottom = 168.0
grow_horizontal = 2

[node name="playerswapPanel" type="Panel" parent="UI"]
visible = false
offset_left = 480.0
offset_top = 192.0
offset_right = 736.0
offset_bottom = 512.0

[node name="swapnamecontainer" type="VBoxContainer" parent="UI/playerswapPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 312.0

[node name="colourchoicePanel" type="Panel" parent="UI"]
visible = false
offset_left = 544.0
offset_top = 192.0
offset_right = 672.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2

[node name="choosebuttoncontainer" type="VBoxContainer" parent="UI/colourchoicePanel"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 256.0
alignment = 1

[node name="chooseRed" type="Button" parent="UI/colourchoicePanel/choosebuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "red"

[node name="chooseGreen" type="Button" parent="UI/colourchoicePanel/choosebuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "green"

[node name="chooseBlue" type="Button" parent="UI/colourchoicePanel/choosebuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "blue"

[node name="chooseYellow" type="Button" parent="UI/colourchoicePanel/choosebuttoncontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "yellow"

[node name="Panel" type="Panel" parent="UI"]
visible = false
offset_top = 448.0
offset_right = 128.0
offset_bottom = 640.0

[node name="aibuttonscontainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/Panel/aibuttonscontainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="UI/Panel/aibuttonscontainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="UI/Panel/aibuttonscontainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button4" type="Button" parent="UI/Panel/aibuttonscontainer"]
layout_mode = 2
size_flags_vertical = 3
text = "START"

[connection signal="pressed" from="dicerollbutton" to="." method="_on_dicerollbutton_pressed"]
[connection signal="pressed" from="showpowercardsbutton" to="." method="_on_showpowercardsbutton_pressed"]
[connection signal="pressed" from="Showshopbutton" to="." method="_on_showshopbutton_pressed"]
[connection signal="pressed" from="permanentcardstogglebutton" to="." method="_on_permanentcardstogglebutton_pressed"]
[connection signal="pressed" from="Victorypanel/Backtomenubutton" to="." method="_on_backtomenubutton_pressed"]
